--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-aria-components": "^1.13.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
